if(BUILD_EXAMPLES)
	set(examples closure coroutine export_object klass prop rawfunc simple table)
	foreach(example IN LISTS examples)
		add_executable(${example} ${example}.cpp)
		if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${example}.nut")
			configure_file(${example}.nut ${example}.nut COPYONLY)
		endif()
		target_link_libraries(${example} squirrel_static)
		target_link_libraries(${example} sqstdlib_static)
	endforeach()
endif(BUILD_EXAMPLES)
